package br.com.ajf.learnjavadesignpatterns.builder;

public interface Item
{
	String name();
	Packing packing();
	float price();
}
