package br.com.ajf.learnjavadesignpatterns.builder;

public interface Packing
{
	String pack();
}
