package br.com.ajf.learnjavadesignpatterns.builder;

public final class Pepsi extends ColdDrink
{
	@Override
	public String name()
	{
		return "Pepsi";
	}

	@Override
	public float price()
	{
		return 35.0f;
	}
}
