package br.com.ajf.learnjavadesignpatterns.builder;

public class Wrapper implements Packing
{
	@Override
	public String pack()
	{
		return "Wrapper" ;
	}
}
